--- a/BlzrSvrFromScratch01/Core/Core.csproj
+++ b/BlzrSvrFromScratch01/Core/Core.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <NpmLastInstall>node_modules/.last-install</NpmLastInstall>
   </PropertyGroup>
 
 
@@ -15,4 +16,38 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-rc.2.21480.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\css\tailwind.css" />
+  </ItemGroup>
+
+    <!--<Target Name="ProcessScopedCssFilesWithTailwind" AfterTargets="_GenerateScopedCssFiles">
+        <MSBuild Projects="$(MSBuildProjectFile)"
+                 Properties="CurrentScopedCssFile=%(_ScopedCssOutputs.Identity)"
+                 Targets="ProcessScopedCssFileWithTailwind">
+        </MSBuild>
+    </Target>
+
+    <Target Name="ProcessScopedCssFileWithTailwind">
+        <Message Importance="high"
+                 Text="Processing with Tailwind: $(CurrentScopedCssFile)" />
+        <Exec Command="npx tailwindcss -i $(CurrentScopedCssFile) -o $(CurrentScopedCssFile)"
+              WorkingDirectory="$(MSBuildProjectDirectory)"
+              EnvironmentVariables="TAILWIND_MODE=build" />
+    </Target>-->
+
+    <Target Name="CheckForNpm" BeforeTargets="NpmInstall">
+      <Exec Command="npm -v" ContinueOnError="true">
+         <Output TaskParameter="ExitCode" PropertyName="ErrorCode"/>
+      </Exec>
+      <Error Condition="'$(ErrorCode)' != '0'" Text="You must install NPM to build this project" />
+    </Target>
+
+    <Target Name="NpmInstall" BeforeTargets="BuildCSS" Inputs="package.json" Outputs="$(NpmLastInstall)">
+      <Exec Command="npm install" />
+      <Touch Files="$(NpmLastInstall)" AlwaysCreate="true" />
+    </Target>
+
+    <Target Name="BuildCSS" BeforeTargets="Compile">
+      <Exec Command="npm run buildcss:dev" />
+    </Target>
 </Project>
